k8s/zadanie_2/manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: flask-redis-k8s:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
